# pyrust-debugger

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.codex/: README.md  config.toml
.codex/agents/: cpython-stack-builder.toml  dap-proxy-builder.toml  process-thread-acceptance-builder.toml  process-thread-fixture-builder.toml  process-thread-mode-reviewer.toml  process-thread-presentation-builder.toml  reverse-acceptance-builder.toml  reverse-slice-reviewer.toml  reverse-stack-builder.toml  slice-acceptance-builder.toml  slice-reviewer.toml  (+1 more)
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json  install-vscode-extension.sh  refresh-pyrust.sh
docs/: README.md  analysis-report.md  architecture.md  feasibility.md  mvp.md  project-plan.md  risk-register.md  test-plan.md
research/: README.md
research/fixtures/rust_outer/: Cargo.toml
research/fixtures/rust_outer/src/: async_embedded.py  async_main.rs  embedded.py  main.rs  process_main.rs  process_thread_main.rs  threaded_embedded.py  threaded_main.rs
scripts/: accept-async-slice.sh  accept-container-inside.sh  accept-container.sh  accept-debugpy-slice.sh  accept-first-slice.sh  accept-multiprocess-slice.sh  accept-process-thread-mode.sh  accept-python-rust-threads.sh  accept-reverse-slice.sh  accept-rust-async-slice.sh  accept-rust-multiprocess-slice.sh  accept-rust-thread-slice.sh  accept-thread-slice.sh  merge-demo-voiceover.ps1  submission-status.sh  verify-submission.sh
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
(+129 files in other folders)
