[package]
name = "rust-outer-python-inner"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.29.0", features = ["auto-initialize"] }

[profile.dev]
opt-level = 0
debug = 2
strip = false

[[bin]]
name = "rust-outer-python-threads"
path = "src/threaded_main.rs"

[[bin]]
name = "rust-outer-python-processes"
path = "src/process_main.rs"

[[bin]]
name = "rust-outer-python-async"
path = "src/async_main.rs"
